@@ -44,6 +44,7 @@
 - [ ] see the log_reader.rb bug about the ErrorTrap#show_dialog cancel
       button
 **** TODO Continue Logger in src/logger
+     CLOCK: [2012-04-30 lun. 19:22]--[2012-04-30 lun. 20:09] =>  0:47
      CLOCK: [2012-04-30 lun. 17:15]--[2012-04-30 lun. 17:51] =>  0:36
      CLOCK: [2012-03-20 mar. 19:26]--[2012-03-20 mar. 19:46] =>  0:20
      CLOCK: [2012-03-20 mar. 18:46]--[2012-03-20 mar. 19:04] =>  0:18
@@ -128,10 +129,10 @@
       - [X] gettext must handle TRANSLATORS comments
 - [X] Find other translatable strings
 - [X] May move configure.in DEFUN to m4/
-- [ ] A bin from this library is in conflict with bsdutils's logger
+- [X] A bin from this library is in conflict with bsdutils's logger
       Fix this
-      - [ ] Prefix manual and texinfo called 'logger' with 'rainbrurpg-'
-      - [ ] Is there a binary called logger ?
-- [ ] Many members must be private
-- [ ] Must escape some characters (`, :)
+      - [X] Prefix manual and texinfo called 'logger' with 'rainbrurpg-'
+      - [X] Is there a binary called logger ? NO
+- [X] Many members must be private
+- [ ] Must escape some characters (`, :) in YAML output
 - [ ] Must update texinfo for v1 YAML output
